--- a/Languages/CPP/answers.json
+++ b/Languages/CPP/answers.json
@@ -1,16 +1,16 @@
 {
   "answers": [
     {
-      "answer": "It is an object-oriented programming language. which includes the concepts such as classes, objects, inheritance, polymorphism, abstraction",
-      "details": "C+ It is an object-oriented programming language. which includes the concepts such as classes, objects, inheritance, polymorphism, abstraction"
+      "answer": "Type "It is," at the beginning of all answers/ input a description of something relavent to your language/ items here will populate incorrect answers for qestions.",
+      "details": "Here you would give a detailed description of the something used in the answer key above, for more information look at the .json in the android folder."
     },
     {
-      "answer": "It is Runtime and Compile time polymorphism..",
-      "details": "Polymorphism means multiple forms. It means having more than one function with the same function name but with different functionalities."
+      "answer": "EXAMPLE: It is a four legged animal that meows.",
+      "details": "EXAMPLE: The cat is a domestic species of small carnivorous mammal. It is the only domesticated species in the family Felidae and is often referred to as the domestic cat to distinguish it from the wild members of the family."
     },
     {
-      "answer": "It is a logical division of the code which is designed to stop the naming conflict.",
-      "details": "The namespace is a logical division of the code which is designed to stop the naming conflict. The namespace defines the scope where the identifiers such as variables, class, functions are declared. The main purpose of using namespace in C++ is to remove the ambiguity. Ambiquity occurs when the different task occurs with the same name"
+      "answer": "EXAMPLE: It is a wheeled motor vehicle used for transportation.",
+      "details": "EXAMPLE: Most definitions of cars say that they run primarily on roads, seat one-to-eight people, have four wheels and mainly transport people rather than goods. Cars came into global use during the 20th century, and developed economies depend on them."
     }
   ]
 }
