--- a/Languages/CPP/questions.json
+++ b/Languages/CPP/questions.json
@@ -2,29 +2,29 @@
   "questions": [
     {
       "id": 0,
-      "question": "What are the advantages of C++?",
+      "question": "What is some of the advantages of C++?",
       "details": "C++ doesn't only maintains all aspects from C language, it also simplifies memory management and adds several features like classes, inhertance etc.",
       "questionType": "multi",
       "trueOrFalse": false,
-      "shortAns": "it is C++ is a highly portable language",
+      "shortAns": "It is a highly portable language",
       "tag": "C++"
     },
     {
       "id": 1,
-      "question": "What are the different types of polymorphism in C++?",
+      "question": "What is some of the different types of polymorphism in C++?",
       "details": "Polymorphism means multiple forms. It means having more than one function with the same function name but with different functionalities",
       "questionType": "multi",
       "trueOrFalse": false,
-      "shortAns": "Runtime and Compile time polymorphism.",
+      "shortAns": "It is Runtime and Compile time.",
       "tag": "C++"
     },
     {
       "id": 2,
-      "question": "Define namespace in C++.",
+      "question": "What is the namespace in C++.",
       "details": "The namespace is a logical division of the code which is designed to stop the naming conflict. The namespace defines the scope where the identifiers such as variables, class, functions are declared. The main purpose of using namespace in C++ is to remove the ambiguity. Ambiquity occurs when the different task occurs with the same name",
       "questionType": "multi",
       "trueOrFalse": false,
-      "shortAns": "The namespace is a logical division of the code which is designed to stop the naming conflict.",
+      "shortAns": "It is a logical division of the code which is designed to stop the naming conflict.",
       "tag": "C++"
     }
   ]
