--- a/Languages/Python/answers.json
+++ b/Languages/Python/answers.json
@@ -9,8 +9,8 @@
       "details": "Here you would speak on more information for the incorrect answer you have referenced, for more information look at the .json in the android folder."
     },
     {
-      "answer": "No",
-      "details": "Depending on the python interpreter, if you are using CPython (the most common), you are limited by the GIL to one operation at a time."
+      "answer": "It is an example of how you should right the answer, keep it short.",
+      "details": "Here you would speak on more information for the incorrect answer you have referenced, for more information look at the .json in the android folder."
     }
   ]
 }
