--- a/Languages/Android/questions.json
+++ b/Languages/Android/questions.json
@@ -514,6 +514,15 @@
       "trueOrFalse": false,
       "shortAns": "",
       "tag": "asynctask"
+    },
+    {
+      "id": 57,
+      "question": "How many types of activity lifecycle are there in android?",
+      "details": "There are  7 lifecycle methods of android activity. They are onCreate(), onStart(), onResume(), onPause(), onStop(), onRestart(), onDestroy().",
+      "questionType": "bool",
+      "trueOrFalse": false,
+      "shortAns": "",
+      "tag": "lifecycle"
     }
   ]
 }
