--- a/Interview_Prep_App/native_java/retrofit/src/main/res/values/strings.xml
+++ b/Interview_Prep_App/native_java/retrofit/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="score_title">QUIZ FINISHED!</string>
     <string name="question_next">NEXT</string>
     <string name="question_new_quiz">New Quiz</string>
+    <string name="submit_button">Submit Answer</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
