Add Amandeep Singh to contributors list (#32)
* Add Amandeep Singh to contributors list

* Changes made

Co-authored-by: Nudennie <9339984+Tc2r1@users.noreply.github.com>

--- a/Languages/Android/questions.json
+++ b/Languages/Android/questions.json
@@ -514,6 +514,15 @@
       "trueOrFalse": false,
       "shortAns": "",
       "tag": "asynctask"
+    },
+    {
+      "id": 57,
+      "question": "Are there 8 lifecycle methods in Android Activity?",
+      "details": "There are  7 lifecycle methods of android activity. They are onCreate(), onStart(), onResume(), onPause(), onStop(), onRestart(), onDestroy().",
+      "questionType": "bool",
+      "trueOrFalse": false,
+      "shortAns": "",
+      "tag": "lifecycle"
     }
   ]
 }
