--- a/Languages/Android/questions.json
+++ b/Languages/Android/questions.json
@@ -550,6 +550,33 @@
       "trueOrFalse": false,
       "shortAns": "It attaches and detaches fragments from their host activity.",
       "tag": "fragment"
+    },
+    {
+      "id": 61,
+      "question": "To pass an object to different activities, which interface should the object implement?",
+      "details": "To pass an object to different activities, the object should implement either Serializable or Parcelable interface.",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": "It should implement either serializable or parcelable.",
+      "tag": "intent"
+    },
+    {
+      "id": 62,
+      "question": "What is a dangerous permission?",
+      "details": "Permissions that are dangerous include those that affect user data in some way. For example reading or writing data from device's storage",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": "It is a permission that may affect user's privacy.",
+      "tag": "permissions"
+    },
+    {
+      "id": 62,
+      "question": "What is a pending intent?",
+      "details": "A PendingIntent object wraps the functionality of an Intent object while allowing your app to specify something that another app should do, on your app’s behalf, in response to a future action. For example, the wrapped intent might be invoked when an alarm goes off, or when the user taps on a notification.",
+      "questionType": "multi",
+      "trueOrFalse": false,
+      "shortAns": "It is used to allow foriegn apps to execute our app's code",
+      "tag": "pending_intent"
     }
   ]
 }
