--- a/Languages/Android/questions.json
+++ b/Languages/Android/questions.json
@@ -575,7 +575,7 @@
       "details": "A PendingIntent object wraps the functionality of an Intent object while allowing your app to specify something that another app should do, on your app’s behalf, in response to a future action. For example, the wrapped intent might be invoked when an alarm goes off, or when the user taps on a notification.",
       "questionType": "multi",
       "trueOrFalse": false,
-      "shortAns": "It is used to allow foriegn apps to execute our app's code",
+      "shortAns": "It allows foreign applications to execute our app's code",
       "tag": "pending_intent"
     }
   ]
